# rust-dominant-speaker

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  publish.yml
benches/: tick.rs
docs/: RESEARCH-IMPROVEMENTS.md
docs/superpowers/plans/: 2026-04-22-v0.2-implementation.md
src/: detector.rs  lib.rs  numerics.rs  speaker.rs
src/detector/: adversarial_tests.rs  tests.rs
