[package]
name = "rust-dominant-speaker"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Pure-Rust port of the Jitsi/mediasoup dominant speaker identification algorithm (Volfin/Cohen 2012)."
repository = "https://github.com/anatolykoptev/rust-dominant-speaker"
homepage = "https://github.com/anatolykoptev/rust-dominant-speaker"
documentation = "https://docs.rs/rust-dominant-speaker"
readme = "README.md"
keywords = ["webrtc", "sfu", "audio", "speaker", "jitsi"]
categories = ["multimedia::audio", "algorithms"]

[lib]
name = "dominant_speaker"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tick"
harness = false
